--- a/src/luca/DepthAnalysis.Rmd
+++ b/src/luca/DepthAnalysis.Rmd
@@ -4,12 +4,52 @@ library(ggplot2)
 library(roahd)
 ```
 
+# load and preprocess the data
+
 ```{r}
 data_numeric_cleaned = readRDS("../../data/data_numeric_cleaned2.RData")
-questionario = readRDS("../../data/Surveycleaned.RData")
-combined_data <- merge(data_numeric_cleaned, questionario, by.x = "id", by.y = "id")
+survey_data = readRDS("../../data/Surveycleaned.RData")
+test<-survey_data$campo.studi!="STEM (Science, Technology, Engineering, Mathematics)"         
+survey_data$campo.studi<-ifelse(test,"Others","STEM (Science, Technology, Engineering, Mathematics)")
+survey_data$campo.studi[is.na(survey_data$campo.studi)] = "missing"
+###########
+test<-survey_data$stato!="Italia"         
+survey_data$stato<-ifelse(test,"Others","Italia")
+survey_data$stato[is.na(survey_data$stato)] = "missing"
+###########
+test<-survey_data$libri!="0"         
+survey_data$libri<-ifelse(test,"1+","0")
+survey_data$libri[is.na(survey_data$libri)] = "missing"
+##########
+test<-survey_data$estero!="No"         
+survey_data$estero<-ifelse(test,"Si","No")
+survey_data$estero[is.na(survey_data$estero)] = "missing"
+##########
+colnames(survey_data)[1] = "age"
+
+test<-survey_data$age < 22.5         
+survey_data$age<-ifelse(test,"Under22.5","Over22.5")
+survey_data$age[is.na(survey_data$age)] = "missing"
+######### TO DO
+# test<-survey_data$genere!="No"         
+# survey_data$genere<-ifelse(test,"Si","No")
+# survey_data$genere[is.na(survey_data$genere)] = "missing"
+######### 
+test<-survey_data$concerti>5         
+survey_data$concerti<-ifelse(test,"more than 5","less than 5")
+######### 
+survey_data$regione[is.na(survey_data$regione)] = "missing"
+######### TO DO
+survey_data$abitanti.citta[survey_data$abitanti.citta=="Meno di 1000 abitanti"] = "Tra 10.000 e 100.000"      
+
+
+```
+# combine the data
+```{r}
+combined_data <- merge(data_numeric_cleaned, survey_data, by.x = "id", by.y = "id")
 ```
 
+# single ecdf
 ```{r}
 person_id <- "03Nplw4GO2h5ut5"  # Sostituisci con l'ID della persona desiderata
 covariate <- "danceability"  # Sostituisci con la covariata desiderata
@@ -48,7 +88,7 @@ for (i in seq_along(edf_list)) {
 # funzione "esternata" for debugging
 ```{r}
 music_vars = colnames(data_numeric_cleaned)[1:13]
-survey_covs = colnames(questionario)[3:19]
+survey_covs = colnames(survey_data)[3:19]
 
 ii = 8
 jj = 1
@@ -80,7 +120,7 @@ f_data_all = fData(grid, t(matrice_da_lista_all))
 # covariate su cui il codice non funziona
 missed_covariates = c()
 for (group in unique_groups) {
-  indices <- which(questionario[,survey_cov] == group)
+  indices <- which(survey_data[,survey_cov] == group)
   indices_list[[as.character(group)]] <- indices
 }
 
@@ -99,7 +139,7 @@ if(all(lapply(indices_list, length)>1)){
   
   # Tracciare ogni EDF dalla lista con colore basato sulla colonna di gruppo
   for (i in seq_along(edf_list)) {
-    group_value <- questionario[i + 1,survey_cov]
+    group_value <- survey_data[i + 1,survey_cov]
     lines(grid, edf_list[[i]], lwd = 0.5, col = color_palette[unique_groups == group_value], cex = 0.1)
   }
   
@@ -124,11 +164,11 @@ print(missed_covariates)
 ```
 
 
-
+# depth function
 ```{r}
 grid <- seq(0, 1, length.out = 1000)
 depth_covcov <- function(music_cov, survey_cov){ 
-  plot_bool = 0
+  plot_bool = 1 
   
 # Creare una lista di EDF per tutte le persone
 edf_list <- lapply(unique(combined_data$id), function(person_id) {
@@ -152,7 +192,7 @@ edf_list <- lapply(unique(combined_data$id), function(person_id) {
   # covariate su cui il codice non funziona
   missed_covariates = c()
   for (group in unique_groups) {
-    indices <- which(questionario[,survey_cov] == group)
+    indices <- which(survey_data[,survey_cov] == group)
     indices_list[[as.character(group)]] <- indices
   }
   
@@ -171,7 +211,7 @@ edf_list <- lapply(unique(combined_data$id), function(person_id) {
     
     # Tracciare ogni EDF dalla lista con colore basato sulla colonna di gruppo
     for (i in seq_along(edf_list)) {
-      group_value <- questionario[i + 1,survey_cov]
+      group_value <- survey_data[i + 1,survey_cov]
       if(plot_bool)
         lines(grid, edf_list[[i]], lwd = 0.5, col = color_palette[unique_groups == group_value], cex = 0.1)
     }
@@ -189,7 +229,7 @@ edf_list <- lapply(unique(combined_data$id), function(person_id) {
       #relative depth function
       
       relative_BD = BD_relative(median_curve, f_data_all)
-      print(relative_BD)
+      #print(relative_BD)
       
     }
   }else{
@@ -207,10 +247,11 @@ for(m in music_vars){
 }
 ```
 
-
+# all music all survey covs
 ```{r,warning=FALSE}
 music_vars = colnames(data_numeric_cleaned)[1:12]
-survey_covs = colnames(questionario)[1:16]
+music_vars = music_vars[!(music_vars %in% c("year","duration"))]
+survey_covs = colnames(survey_data)[1:16]
 missed_vars = c()
 for(m in music_vars){
   for (s in survey_covs){
@@ -221,7 +262,7 @@ print(unique(missed_vars))
 ```
 ```{r}
 for (i in unique(missed_vars)){
-  print(table(questionario[,i]))
+  print(table(survey_data[,i]))
   print("------")
 }
 ```
