--- a/src/ale/Permutational_Test.Rmd
+++ b/src/ale/Permutational_Test.Rmd
@@ -7,6 +7,7 @@ output: html_document
 
 ```{r}
 library(dplyr)
+set.seed(53)
 ```
 
 
@@ -391,6 +392,25 @@ res_age<-my_perm_median(cat1,cat2)
 res_age
 ```
 
+
+## Permutation Test each num_cov by region
+
+```{r}
+test<-survey_data$regione!="nord"         
+survey_data$regione<-ifelse(test,"centro-sud","nord")
+temp<-survey_data$id[!is.na(survey_data$regione)]
+selected_regione <- survey_data$regione[!is.na(survey_data$regione)]
+cat1<-temp[selected_regione =="nord"]
+cat2<-temp[selected_regione =="centro-sud"]
+```
+rejecting H0: liveness=0.066
+```{r}
+res_region<-my_perm_median(cat1,cat2)
+res_region
+```
+
+
+
 ## Anova
 lavoro, importanza.musica (not balanced), genere (va bilanciato), come.ascolti.musica, concerti (da bilanciare),regione (da bilanciare), abitanti
 
@@ -450,18 +470,74 @@ median_data$id<-id_col
 ```
 
 
-## Anova Permutation test for Work
+## Anova Permutation test for Work 
+rejecting H0: popularity=0.090, acousticness=0.023, energy=0.047, loudness=0.060, tempo=0.038
 
 ```{r}
 res_lavoro<-my_one_way(survey_data$lavoro)
 res_lavoro
 ```
 
+
+## Anova Permutation test for Importance of music
+rejecting H0: popularity=0.097. Unbalanced data
+
 ```{r}
-t1<-median_data$liveness
-t2<-survey_data$lavoro
-fit<-aov(unlist(t1) ~ t2)
-T0 <- summary(fit)[[1]][1,4]
- one_way_anova(unlist(t1), t2)
+res_importanza.musica<-my_one_way(survey_data$importanza.musica)
+res_importanza.musica
 ```
+
+##Anova Permutiation test for How do you listen to music
+rejecting H0: none
+
+```{r}
+res_come.ascolti<-my_one_way(survey_data$come.ascolti.musica)
+res_come.ascolti
+```
+
+##Anova Permutation test for Number of concerts
+
+```{r}
+# Define the breakpoints for the categories
+breakpoints <- c(-Inf, 1, 3, Inf)
+
+# Create a new categorical column based on the numeric_column
+survey_data$concerti <- cut(survey_data$concerti, breaks = breakpoints, labels = c("<=1", "(1,3]", ">3"), include.lowest = TRUE)
+```
+rejecting H0: none. Possible to change the division of the data
+```{r}
+res_concerti<-my_one_way(survey_data$concerti)
+res_concerti
+```
+
+##Anova Permutation for Number of inhabitants
+
+```{r}
+table(survey_data$abitanti.citta)
+
+# Transform the column based on conditions
+survey_data <- survey_data %>%
+  mutate(
+    abitanti.citta = case_when(
+      abitanti.citta %in% c("Meno di 1000 abitanti", "Tra 1.000 e 10.000 abitanti", "Tra 10.000 e 100.000") ~ "Meno di 100.000 abitanti",
+      TRUE ~ abitanti.citta
+    )
+  )
+table(survey_data$abitanti.citta)
+```
+rejecting H0: none
+```{r}
+res_abitanti<-my_one_way(survey_data$abitanti.citta)
+res_abitanti
+```
+
+
+
+
+
+
+
+
+
+
 
