--- a/src/ale/Permutational_Test.Rmd
+++ b/src/ale/Permutational_Test.Rmd
@@ -323,7 +323,7 @@ for (i in seq_along(selected_indices)) {
 ```
 
 
-## Anova
+## One-way Anova
 
 ```{r}
 #Non parametric one way anova function
@@ -504,24 +504,22 @@ Raga help non riesco a farlo stampare nell'ordine corretto,
 volevo colorare di rosso i pvalue delle categorie significative con alpha=0.05
 
 ```{r}
-library(kableExtra)
-# Assuming res is your matrix
+
 threshold <- 0.05
-condition <- ifelse(res< threshold, "red", "black")
+condition0.05 <- ifelse(res< threshold, 1, 0)
 
+condition0.05<-as.data.frame(condition0.05)
+count0.05<-numeric()
+for (i in 1:12){
+count0.05[i]<-sum(condition0.05[,i]==1)}
 
+threshold <- 0.1
+condition0.1 <- ifelse(res< threshold, 1, 0)
 
-# Convert the matrix to a data frame
-df_res <- as.data.frame(res)
-
-# Apply the color condition to the data frame
-colored_df_res <- df_res
-colored_df_res[] <- lapply(df_res[], function(x) cell_spec(x, color = condition))
-
-# Display the colored data frame using kableExtra
-kable(colored_df_res, escape = FALSE) %>%
-  kable_styling()
-
+condition0.1<-as.data.frame(condition0.1)
+count0.1<-numeric()
+for (i in 1:12){
+count0.1[i]<-sum(condition0.1[,i]==1)}
 
 ```
 
@@ -535,6 +533,303 @@ saveRDS(reduced,"../../data/survey_reduced.RData")
 
 ```
  
+## Two-way Anova
+
+```{r}
+survey_data<-readRDS("../../data/survey_reduced.RData")
+res<-readRDS("../../data/pvalues_cat.RData")
+```
+
+###energy:age, abroad 
+reject HO-> keep interaction
+p-value:0.048
+```{r}
+B=1000
+
+T0_stat <- summary.aov(aov(median_data$energy~ survey_data$età+ survey_data$estero+survey_data$età:survey_data$estero))[[1]][3,4]  
+T0_stat
+
+aov.H0 <- aov(median_data$energy~ survey_data$età+ survey_data$estero)
+aov.H0
+
+residuals.H0 <- aov.H0$residuals 
+n = length(median_data$energy)
 
 
+T_stat <- numeric(B)
+for(perm in 1:B){
+  permutation <- sample(n)
+  # permute the residuals
+  residuals.H0 <- residuals.H0[permutation]
+  perm.response.H0 <- aov.H0$fitted + residuals.H0
+  # re-fit full model to calculate statistic
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$età + survey_data$estero + survey_data$età:survey_data$estero))[[1]][3,4]
+}
+sum(T_stat >= T0_stat)/B
+```
+### liveness: sex,abroad
+accept H0-> no interaction
+p-value 0.427
+
+```{r}
+B=1000
+
+T0_stat <- summary.aov(aov(median_data$liveness~ survey_data$sesso+ survey_data$estero+survey_data$sesso:survey_data$estero))[[1]][3,4]  
+T0_stat
+
+aov.H0 <- aov(median_data$liveness~ survey_data$sesso+ survey_data$estero)
+aov.H0
+
+residuals.H0 <- aov.H0$residuals 
+n = length(median_data$liveness)
+
+
+T_stat <- numeric(B)
+for(perm in 1:B){
+  permutation <- sample(n)
+  # permute the residuals
+  residuals.H0 <- residuals.H0[permutation]
+  perm.response.H0 <- aov.H0$fitted + residuals.H0
+  # re-fit full model to calculate statistic
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$sesso + survey_data$estero + survey_data$sesso:survey_data$estero))[[1]][3,4]
+}
+sum(T_stat >= T0_stat)/B
+```
+### acusticness: age,abroad,work (no interactions)
+
+H1 all interaction, H0 no 3 interactions
+accept H0
+```{r}
+B=1000
+
+T0_stat <- summary.aov(aov(median_data$acousticness~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$estero+survey_data$lavoro:survey_data$età+survey_data$età:survey_data$estero+survey_data$lavoro:survey_data$estero:survey_data$età))[[1]][3,4]  
+
+
+aov.H0 <- aov(median_data$acousticness~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$estero+survey_data$lavoro:survey_data$età+survey_data$età:survey_data$estero)
+
+
+residuals.H0 <- aov.H0$residuals 
+n = length(median_data$acousticness)
+
+
+T_stat <- numeric(B)
+for(perm in 1:B){
+  permutation <- sample(n)
+  # permute the residuals
+  residuals.H0 <- residuals.H0[permutation]
+  perm.response.H0 <- aov.H0$fitted + residuals.H0
+  # re-fit full model to calculate statistic
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$estero+survey_data$lavoro:survey_data$età+survey_data$età:survey_data$estero+survey_data$lavoro:survey_data$estero:survey_data$età))[[1]][3,4]
+}
+sum(T_stat >= T0_stat)/B
+```
+H1 as before H0 remove estero:lavoro
+accept H0
+```{r}
+B=1000
+
+T0_stat <- summary.aov(aov(median_data$acousticness~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$estero+survey_data$lavoro:survey_data$età+survey_data$età:survey_data$estero))[[1]][3,4]  
+
+
+aov.H0 <- aov(median_data$acousticness~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$età+survey_data$età:survey_data$estero)
+
+
+residuals.H0 <- aov.H0$residuals 
+n = length(median_data$acousticness)
+
+
+T_stat <- numeric(B)
+for(perm in 1:B){
+  permutation <- sample(n)
+  # permute the residuals
+  residuals.H0 <- residuals.H0[permutation]
+  perm.response.H0 <- aov.H0$fitted + residuals.H0
+  # re-fit full model to calculate statistic
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$estero+survey_data$lavoro:survey_data$età+survey_data$età:survey_data$estero))[[1]][3,4]
+}
+sum(T_stat >= T0_stat)/B
+```
+H1 as before H0 remove estero:età
+accept H0
+
+
+```{r}
+B=1000
+
+T0_stat <- summary.aov(aov(median_data$acousticness~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$età+survey_data$età:survey_data$estero))[[1]][3,4]  
+
+
+aov.H0 <- aov(median_data$acousticness~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$età)
+
+
+residuals.H0 <- aov.H0$residuals 
+n = length(median_data$acousticness)
+
+
+T_stat <- numeric(B)
+for(perm in 1:B){
+  permutation <- sample(n)
+  # permute the residuals
+  residuals.H0 <- residuals.H0[permutation]
+  perm.response.H0 <- aov.H0$fitted + residuals.H0
+  # re-fit full model to calculate statistic
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$età+survey_data$età:survey_data$estero))[[1]][3,4]
+}
+sum(T_stat >= T0_stat)/B
+```
+H1 as before H0 remove lavoro:età
+accept H0
+
+-> no interactions
+```{r}
+B=1000
+
+T0_stat <- summary.aov(aov(median_data$acousticness~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$età))[[1]][3,4]  
+
+
+aov.H0 <- aov(median_data$acousticness~ survey_data$lavoro+ survey_data$età+ survey_data$estero)
+
+
+residuals.H0 <- aov.H0$residuals 
+n = length(median_data$acousticness)
+
+
+T_stat <- numeric(B)
+for(perm in 1:B){
+  permutation <- sample(n)
+  # permute the residuals
+  residuals.H0 <- residuals.H0[permutation]
+  perm.response.H0 <- aov.H0$fitted + residuals.H0
+  # re-fit full model to calculate statistic
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$età))[[1]][3,4]
+}
+sum(T_stat >= T0_stat)/B
+```
+### loudness: age, abroad, instrument (no interactions)
+
+H1 all interaction, H0 no 3 interactions
+accept H0
+
+```{r}
+B=1000
+
+T0_stat <- summary.aov(aov(median_data$loudness~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$età+survey_data$età:survey_data$estero+survey_data$strumento:survey_data$estero:survey_data$età))[[1]][3,4]  
+
+
+aov.H0 <- aov(median_data$loudness~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$età+survey_data$età:survey_data$estero)
+
+
+residuals.H0 <- aov.H0$residuals 
+n = length(median_data$loudness)
+
+
+T_stat <- numeric(B)
+for(perm in 1:B){
+  permutation <- sample(n)
+  # permute the residuals
+  residuals.H0 <- residuals.H0[permutation]
+  perm.response.H0 <- aov.H0$fitted + residuals.H0
+  # re-fit full model to calculate statistic
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$età+survey_data$età:survey_data$estero+survey_data$strumento:survey_data$estero:survey_data$età))[[1]][3,4]
+}
+sum(T_stat >= T0_stat)/B
+```
+
+H0 remove età:estero
+accept H0
+```{r}
+B=1000
+
+T0_stat <- summary.aov(aov(median_data$loudness~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$età+survey_data$età:survey_data$estero))[[1]][3,4]  
+
+
+aov.H0 <- aov(median_data$loudness~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$età)
+
+
+residuals.H0 <- aov.H0$residuals 
+n = length(median_data$loudness)
+
+
+T_stat <- numeric(B)
+for(perm in 1:B){
+  permutation <- sample(n)
+  # permute the residuals
+  residuals.H0 <- residuals.H0[permutation]
+  perm.response.H0 <- aov.H0$fitted + residuals.H0
+  # re-fit full model to calculate statistic
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$età+survey_data$età:survey_data$estero))[[1]][3,4]
+}
+sum(T_stat >= T0_stat)/B
+```
+H0 remove età:strumento
+accept H0
+```{r}
+B=1000
+
+T0_stat <- summary.aov(aov(median_data$loudness~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$età))[[1]][3,4]  
+
+
+aov.H0 <- aov(median_data$loudness~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero)
+
+
+residuals.H0 <- aov.H0$residuals 
+n = length(median_data$loudness)
+
+
+T_stat <- numeric(B)
+for(perm in 1:B){
+  permutation <- sample(n)
+  # permute the residuals
+  residuals.H0 <- residuals.H0[permutation]
+  perm.response.H0 <- aov.H0$fitted + residuals.H0
+  # re-fit full model to calculate statistic
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$età))[[1]][3,4]
+}
+sum(T_stat >= T0_stat)/B
+```
+H0 remove estero:strumento
+accept H0
+-> no interactions
+```{r}
+B=1000
+
+T0_stat <- summary.aov(aov(median_data$loudness~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero))[[1]][3,4]  
+
+
+aov.H0 <- aov(median_data$loudness~ survey_data$strumento+ survey_data$età+ survey_data$estero)
+
+
+residuals.H0 <- aov.H0$residuals 
+n = length(median_data$loudness)
+
+
+T_stat <- numeric(B)
+for(perm in 1:B){
+  permutation <- sample(n)
+  # permute the residuals
+  residuals.H0 <- residuals.H0[permutation]
+  perm.response.H0 <- aov.H0$fitted + residuals.H0
+  # re-fit full model to calculate statistic
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero))[[1]][3,4]
+}
+sum(T_stat >= T0_stat)/B
+```
+
+## Results
+popularity: sex
+acousticness: age, abroad, work (no interaction)
+danceability: books
+energy: age, abroad (interaction)
+instrumentalness: abroad
+liveness : sex, abroad (no interaction)
+loudness: age, abroad, instrument (no interaction)
+speechiness: 
+tempo: work
+valence: genere
+duration:
+year:
+```{r}
+count0.05
+colnames(res)
+```
 
