--- a/src/ale/Permutational_Test.Rmd
+++ b/src/ale/Permutational_Test.Rmd
@@ -5,7 +5,7 @@ date: "2023-11-22"
 output: html_document
 ---
 
-```{r, eval=FALSE}
+```{r}
 library(dplyr)
 set.seed(53)
 ```
@@ -254,23 +254,24 @@ res_abroad
 ### Permutation Test each num_cov by age
 
 ```{r}
+colnames(survey_data)[1] ="age"
 # Count values below 22.5 in the 'age' column
-values_below_23 <- sum(survey_data$età < 23, na.rm = TRUE)
+values_below_23 <- sum(survey_data$age < 23, na.rm = TRUE)
 values_below_23
 
 # Count missing data in the 'age' column
-missing_data_age <- sum(is.na(survey_data$età))
+missing_data_age <- sum(is.na(survey_data$age))
 missing_data_age
 
 ```
 
 ```{r}
-test<-survey_data$età < 23        
-survey_data$età<-ifelse(test,"Under23","Over23")
-temp<-survey_data$id[!is.na(survey_data$età)]
-selected_età <- survey_data$età[!is.na(survey_data$età)]
-cat1<-temp[selected_età =="Under23"]
-cat2<-temp[selected_età =="Over23"]
+test<-survey_data$age < 23        
+survey_data$age<-ifelse(test,"Under23","Over23")
+temp<-survey_data$id[!is.na(survey_data$age)]
+selected_age <- survey_data$age[!is.na(survey_data$age)]
+cat1<-temp[selected_age =="Under23"]
+cat2<-temp[selected_age =="Over23"]
 ```
 
 
@@ -546,10 +547,10 @@ p-value:0.048
 ```{r}
 B=1000
 
-T0_stat <- summary.aov(aov(median_data$energy~ survey_data$età+ survey_data$estero+survey_data$età:survey_data$estero))[[1]][3,4]  
+T0_stat <- summary.aov(aov(median_data$energy~ survey_data$age+ survey_data$estero+survey_data$age:survey_data$estero))[[1]][3,4]  
 T0_stat
 
-aov.H0 <- aov(median_data$energy~ survey_data$età+ survey_data$estero)
+aov.H0 <- aov(median_data$energy~ survey_data$age+ survey_data$estero)
 aov.H0
 
 residuals.H0 <- aov.H0$residuals 
@@ -563,7 +564,7 @@ for(perm in 1:B){
   residuals.H0 <- residuals.H0[permutation]
   perm.response.H0 <- aov.H0$fitted + residuals.H0
   # re-fit full model to calculate statistic
-  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$età + survey_data$estero + survey_data$età:survey_data$estero))[[1]][3,4]
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$age + survey_data$estero + survey_data$age:survey_data$estero))[[1]][3,4]
 }
 sum(T_stat >= T0_stat)/B
 ```
@@ -602,10 +603,10 @@ accept H0
 ```{r}
 B=1000
 
-T0_stat <- summary.aov(aov(median_data$acousticness~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$estero+survey_data$lavoro:survey_data$età+survey_data$età:survey_data$estero+survey_data$lavoro:survey_data$estero:survey_data$età))[[1]][3,4]  
+T0_stat <- summary.aov(aov(median_data$acousticness~ survey_data$lavoro+ survey_data$age+ survey_data$estero+survey_data$lavoro:survey_data$estero+survey_data$lavoro:survey_data$age+survey_data$age:survey_data$estero+survey_data$lavoro:survey_data$estero:survey_data$age))[[1]][3,4]  
 
 
-aov.H0 <- aov(median_data$acousticness~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$estero+survey_data$lavoro:survey_data$età+survey_data$età:survey_data$estero)
+aov.H0 <- aov(median_data$acousticness~ survey_data$lavoro+ survey_data$age+ survey_data$estero+survey_data$lavoro:survey_data$estero+survey_data$lavoro:survey_data$age+survey_data$age:survey_data$estero)
 
 
 residuals.H0 <- aov.H0$residuals 
@@ -619,7 +620,7 @@ for(perm in 1:B){
   residuals.H0 <- residuals.H0[permutation]
   perm.response.H0 <- aov.H0$fitted + residuals.H0
   # re-fit full model to calculate statistic
-  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$estero+survey_data$lavoro:survey_data$età+survey_data$età:survey_data$estero+survey_data$lavoro:survey_data$estero:survey_data$età))[[1]][3,4]
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$lavoro+ survey_data$age+ survey_data$estero+survey_data$lavoro:survey_data$estero+survey_data$lavoro:survey_data$age+survey_data$age:survey_data$estero+survey_data$lavoro:survey_data$estero:survey_data$age))[[1]][3,4]
 }
 sum(T_stat >= T0_stat)/B
 ```
@@ -628,10 +629,10 @@ accept H0
 ```{r}
 B=1000
 
-T0_stat <- summary.aov(aov(median_data$acousticness~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$estero+survey_data$lavoro:survey_data$età+survey_data$età:survey_data$estero))[[1]][3,4]  
+T0_stat <- summary.aov(aov(median_data$acousticness~ survey_data$lavoro+ survey_data$age+ survey_data$estero+survey_data$lavoro:survey_data$estero+survey_data$lavoro:survey_data$age+survey_data$age:survey_data$estero))[[1]][3,4]  
 
 
-aov.H0 <- aov(median_data$acousticness~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$età+survey_data$età:survey_data$estero)
+aov.H0 <- aov(median_data$acousticness~ survey_data$lavoro+ survey_data$age+ survey_data$estero+survey_data$lavoro:survey_data$age+survey_data$age:survey_data$estero)
 
 
 residuals.H0 <- aov.H0$residuals 
@@ -645,21 +646,21 @@ for(perm in 1:B){
   residuals.H0 <- residuals.H0[permutation]
   perm.response.H0 <- aov.H0$fitted + residuals.H0
   # re-fit full model to calculate statistic
-  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$estero+survey_data$lavoro:survey_data$età+survey_data$età:survey_data$estero))[[1]][3,4]
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$lavoro+ survey_data$age+ survey_data$estero+survey_data$lavoro:survey_data$estero+survey_data$lavoro:survey_data$age+survey_data$age:survey_data$estero))[[1]][3,4]
 }
 sum(T_stat >= T0_stat)/B
 ```
-H1 as before H0 remove estero:età
+H1 as before H0 remove estero:age
 accept H0
 
 
 ```{r}
 B=1000
 
-T0_stat <- summary.aov(aov(median_data$acousticness~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$età+survey_data$età:survey_data$estero))[[1]][3,4]  
+T0_stat <- summary.aov(aov(median_data$acousticness~ survey_data$lavoro+ survey_data$age+ survey_data$estero+survey_data$lavoro:survey_data$age+survey_data$age:survey_data$estero))[[1]][3,4]  
 
 
-aov.H0 <- aov(median_data$acousticness~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$età)
+aov.H0 <- aov(median_data$acousticness~ survey_data$lavoro+ survey_data$age+ survey_data$estero+survey_data$lavoro:survey_data$age)
 
 
 residuals.H0 <- aov.H0$residuals 
@@ -673,21 +674,21 @@ for(perm in 1:B){
   residuals.H0 <- residuals.H0[permutation]
   perm.response.H0 <- aov.H0$fitted + residuals.H0
   # re-fit full model to calculate statistic
-  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$età+survey_data$età:survey_data$estero))[[1]][3,4]
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$lavoro+ survey_data$age+ survey_data$estero+survey_data$lavoro:survey_data$age+survey_data$age:survey_data$estero))[[1]][3,4]
 }
 sum(T_stat >= T0_stat)/B
 ```
-H1 as before H0 remove lavoro:età
+H1 as before H0 remove lavoro:age
 accept H0
 
 -> no interactions
 ```{r}
 B=1000
 
-T0_stat <- summary.aov(aov(median_data$acousticness~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$età))[[1]][3,4]  
+T0_stat <- summary.aov(aov(median_data$acousticness~ survey_data$lavoro+ survey_data$age+ survey_data$estero+survey_data$lavoro:survey_data$age))[[1]][3,4]  
 
 
-aov.H0 <- aov(median_data$acousticness~ survey_data$lavoro+ survey_data$età+ survey_data$estero)
+aov.H0 <- aov(median_data$acousticness~ survey_data$lavoro+ survey_data$age+ survey_data$estero)
 
 
 residuals.H0 <- aov.H0$residuals 
@@ -701,7 +702,7 @@ for(perm in 1:B){
   residuals.H0 <- residuals.H0[permutation]
   perm.response.H0 <- aov.H0$fitted + residuals.H0
   # re-fit full model to calculate statistic
-  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$lavoro+ survey_data$età+ survey_data$estero+survey_data$lavoro:survey_data$età))[[1]][3,4]
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$lavoro+ survey_data$age+ survey_data$estero+survey_data$lavoro:survey_data$age))[[1]][3,4]
 }
 sum(T_stat >= T0_stat)/B
 ```
@@ -713,10 +714,10 @@ accept H0
 ```{r}
 B=1000
 
-T0_stat <- summary.aov(aov(median_data$loudness~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$età+survey_data$età:survey_data$estero+survey_data$strumento:survey_data$estero:survey_data$età))[[1]][3,4]  
+T0_stat <- summary.aov(aov(median_data$loudness~ survey_data$strumento+ survey_data$age+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$age+survey_data$age:survey_data$estero+survey_data$strumento:survey_data$estero:survey_data$age))[[1]][3,4]  
 
 
-aov.H0 <- aov(median_data$loudness~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$età+survey_data$età:survey_data$estero)
+aov.H0 <- aov(median_data$loudness~ survey_data$strumento+ survey_data$age+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$age+survey_data$age:survey_data$estero)
 
 
 residuals.H0 <- aov.H0$residuals 
@@ -730,20 +731,20 @@ for(perm in 1:B){
   residuals.H0 <- residuals.H0[permutation]
   perm.response.H0 <- aov.H0$fitted + residuals.H0
   # re-fit full model to calculate statistic
-  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$età+survey_data$età:survey_data$estero+survey_data$strumento:survey_data$estero:survey_data$età))[[1]][3,4]
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$strumento+ survey_data$age+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$age+survey_data$age:survey_data$estero+survey_data$strumento:survey_data$estero:survey_data$age))[[1]][3,4]
 }
 sum(T_stat >= T0_stat)/B
 ```
 
-H0 remove età:estero
+H0 remove age:estero
 accept H0
 ```{r}
 B=1000
 
-T0_stat <- summary.aov(aov(median_data$loudness~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$età+survey_data$età:survey_data$estero))[[1]][3,4]  
+T0_stat <- summary.aov(aov(median_data$loudness~ survey_data$strumento+ survey_data$age+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$age+survey_data$age:survey_data$estero))[[1]][3,4]  
 
 
-aov.H0 <- aov(median_data$loudness~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$età)
+aov.H0 <- aov(median_data$loudness~ survey_data$strumento+ survey_data$age+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$age)
 
 
 residuals.H0 <- aov.H0$residuals 
@@ -757,19 +758,19 @@ for(perm in 1:B){
   residuals.H0 <- residuals.H0[permutation]
   perm.response.H0 <- aov.H0$fitted + residuals.H0
   # re-fit full model to calculate statistic
-  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$età+survey_data$età:survey_data$estero))[[1]][3,4]
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$strumento+ survey_data$age+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$age+survey_data$age:survey_data$estero))[[1]][3,4]
 }
 sum(T_stat >= T0_stat)/B
 ```
-H0 remove età:strumento
+H0 remove age:strumento
 accept H0
 ```{r}
 B=1000
 
-T0_stat <- summary.aov(aov(median_data$loudness~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$età))[[1]][3,4]  
+T0_stat <- summary.aov(aov(median_data$loudness~ survey_data$strumento+ survey_data$age+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$age))[[1]][3,4]  
 
 
-aov.H0 <- aov(median_data$loudness~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero)
+aov.H0 <- aov(median_data$loudness~ survey_data$strumento+ survey_data$age+ survey_data$estero+survey_data$strumento:survey_data$estero)
 
 
 residuals.H0 <- aov.H0$residuals 
@@ -783,7 +784,7 @@ for(perm in 1:B){
   residuals.H0 <- residuals.H0[permutation]
   perm.response.H0 <- aov.H0$fitted + residuals.H0
   # re-fit full model to calculate statistic
-  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$età))[[1]][3,4]
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$strumento+ survey_data$age+ survey_data$estero+survey_data$strumento:survey_data$estero+survey_data$strumento:survey_data$age))[[1]][3,4]
 }
 sum(T_stat >= T0_stat)/B
 ```
@@ -793,10 +794,10 @@ accept H0
 ```{r}
 B=1000
 
-T0_stat <- summary.aov(aov(median_data$loudness~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero))[[1]][3,4]  
+T0_stat <- summary.aov(aov(median_data$loudness~ survey_data$strumento+ survey_data$age+ survey_data$estero+survey_data$strumento:survey_data$estero))[[1]][3,4]  
 
 
-aov.H0 <- aov(median_data$loudness~ survey_data$strumento+ survey_data$età+ survey_data$estero)
+aov.H0 <- aov(median_data$loudness~ survey_data$strumento+ survey_data$age+ survey_data$estero)
 
 
 residuals.H0 <- aov.H0$residuals 
@@ -810,7 +811,7 @@ for(perm in 1:B){
   residuals.H0 <- residuals.H0[permutation]
   perm.response.H0 <- aov.H0$fitted + residuals.H0
   # re-fit full model to calculate statistic
-  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$strumento+ survey_data$età+ survey_data$estero+survey_data$strumento:survey_data$estero))[[1]][3,4]
+  T_stat[perm] <- summary.aov(aov(   perm.response.H0  ~ survey_data$strumento+ survey_data$age+ survey_data$estero+survey_data$strumento:survey_data$estero))[[1]][3,4]
 }
 sum(T_stat >= T0_stat)/B
 ```
